<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/background_login"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@drawable/avatar"
        android:contentDescription="@string/todo"
        />

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:outlineSpotShadowColor="#bfa134"
        android:textColorHint="#bfa134"
        android:outlineAmbientShadowColor="#bfa134"
        >
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="#bfa134"
            android:textColorHint="#bfa134"
            android:textColorHighlight="#bfa134"
            android:shadowColor="#bfa134"
            android:outlineAmbientShadowColor="#bfa134"
            android:outlineSpotShadowColor="#bfa134"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:outlineSpotShadowColor="#bfa134"
        android:outlineAmbientShadowColor="#bfa134"
        android:textColorHint="#bfa134"
        >
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#bfa134"
            android:textColorHint="#bfa134"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkboxRemember"
        android:text="@string/remember_password"
        android:textColor="#bfa134"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="#bfa134"
        />

    <TextView
        android:id="@+id/textViewSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textStyle="italic|bold"
        android:text="@string/no_account_yet_create_one"
        android:textSize="15sp"
        android:textColor="#bfa134"
        />
</LinearLayout>