<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutMissingPerson"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_marginBottom="5dp">
    <ImageView
        android:id="@+id/imageView"
        android:layout_marginEnd="5dp"
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:scaleType="centerCrop"
        />
    <TextView
        android:id="@+id/textViewTitle"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:text="@string/title"
        android:layout_toEndOf="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textViewDescription"
        android:textSize="12sp"
        android:textColor="#c1c1c1"
        android:text="@string/area"
        android:layout_below="@+id/textViewTitle"
        android:layout_toEndOf="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/textViewTime"
        android:text="@string/date"
        android:textStyle="italic"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="SmallSp"
        />
</RelativeLayout>