<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/background_login"
    >

    <TextView
        android:id="@+id/imageView"
        android:text="Edit Profile"
        android:fontFamily="@font/montserratlight"
        android:textSize="30sp"
        android:textColor="@color/yellow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/todo"/>

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/yellow1"
        android:textColorHint="@color/yellow1"
        android:outlineAmbientShadowColor="@color/yellow1"
        >
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/yellow1"
            android:textColorHint="@color/yellow1"
            android:textColorHighlight="@color/yellow1"
            android:shadowColor="@color/yellow1"
            android:outlineAmbientShadowColor="@color/yellow1"
            android:outlineSpotShadowColor="@color/yellow1"
            android:inputType="textEmailAddress"
            />
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/yellow1"
        android:outlineAmbientShadowColor="@color/yellow1"
        android:textColorHint="@color/yellow1"
        >
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/yellow1"
            android:textColorHint="@color/yellow1"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/yellow1"
        android:outlineAmbientShadowColor="@color/yellow1"
        android:textColorHint="@color/yellow1"
        >
        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColor="@color/yellow1"
            android:textColorHint="@color/yellow1"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/yellow1"
        android:outlineAmbientShadowColor="@color/yellow1"
        android:textColorHint="@color/yellow1"
        >
        <EditText
            android:id="@+id/editTextFullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fullname"
            android:textColor="@color/yellow1"
            android:textColorHint="@color/yellow1"
            android:inputType="text"
            tools:ignore="TextFields"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/yellow1"
        android:outlineAmbientShadowColor="@color/yellow1"
        android:textColorHint="@color/yellow1"
        >
        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColor="@color/yellow1"
            android:textColorHint="@color/yellow1"
            android:inputType="number"
            tools:ignore="TextFields"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/yellow1"
        android:outlineAmbientShadowColor="@color/yellow1"
        android:textColorHint="@color/yellow1"
        >
        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textColor="@color/yellow1"
            android:textColorHint="@color/yellow1"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="Edit"
        android:background="@drawable/custom_button_post"
        />
</LinearLayout>