<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".Activity.DetailMissingPersonActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMissingPersonDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:background="#bfa134" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayoutDetailMissing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nestedScrollViewDetailMissing"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewDetail"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/textViewTitleDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/imageViewDetail"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/title"
                        android:textColor="#bfa134"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textViewTimeDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewTitleDetail"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/date_submitted"
                        android:textColor="#c2c2bf"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textViewDescriptionDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewTimeDetail"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:text="@string/description"
                        android:textColor="#c2c2bf"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textViewCommentDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewDescriptionDetail"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/comment"
                        android:textColor="#bfa134"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerViewCommentDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textViewCommentDetail"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

                    <EditText
                        android:id="@+id/editTextComment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/recyclerViewCommentDetail"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="10dp"
                        android:hint="@string/write_your_comment"
                        android:textColor="#c2c2bf"
                        android:textColorHint="#535353"
                        android:textSize="15sp"
                        android:textStyle="italic" />

                    <Button
                        android:id="@+id/buttonPostComment"
                        android:layout_width="70dp"
                        android:layout_height="25dp"
                        android:layout_below="@+id/editTextComment"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/custom_button"
                        android:text="@string/post"
                        android:textColor="@drawable/custom_text_color"
                        android:textSize="13sp" />
                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>

            <com.getbase.floatingactionbutton.FloatingActionsMenu
                android:id="@+id/multiple_actions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                app:fab_addButtonColorNormal="@color/white"
                app:fab_addButtonColorPressed="@color/white_pressed"
                app:fab_addButtonPlusIconColor="@color/half_black">

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/white"
                    app:fab_colorPressed="@color/white_pressed"
                    app:fab_title="Action A" />

                <com.getbase.floatingactionbutton.FloatingActionButton
                    android:id="@+id/action_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fab_colorNormal="@color/white"
                    app:fab_colorPressed="@color/white_pressed"
                    app:fab_title="Action B" />
            </com.getbase.floatingactionbutton.FloatingActionsMenu>

        </RelativeLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>